--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Gustavo Gama
 description: Cloud Architect | Data Architect | Founder | 2x AWS Certified | Lean Six Sigma Certified | MBA Digital Transformation and Leadership
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/ggama/gustavogama/master/images/gustavo.png
+avatar: https://raw.githubusercontent.com/ggama/gustavogama/master/images/Gustavo.jpg
 
 #
 # Flags below are optional
